test_suite5/ALAN/test_suite/alan-2022-examples/failing/004530_mutation.alan
source h begin leave else(6167) end
